# ais-analysis

./: .gitignore  LICENSE  README.md  config.yaml  data_deep_dive.py  plot_comparison.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_pipeline.py  setup.sh  verify_interpolation.py
config/: production.yaml
docs/: MATERIALIZED_DATA.md  ML_DATA_GUIDE.md  TRAINING_HANDOFF.md
notebooks/: basic_viz_check.ipynb
scripts/: __init__.py  ais_data_cleaner.py  ais_partitioning.py  convert_to_streaming.py  csv_to_parquet.py  download_ais_data.py  fetch_ais_data.sh  fetch_week.sh  find_long_tracks.py  materialize_samples.py  parallel_mds_convert.py  partition_parquet.py  plot_track_comparison.py  repartition_by_mmsi.py  resample_ais_data_simple.py  run_s3_pipeline.py  run_tests.py  s3_ais_processor.py  shard_by_track.py  test_cleaner_logic.py  verify_interpolation.py  zip_to_parquet.py
scripts/.ipynb_checkpoints/: csv_to_parquet-checkpoint.py
src/ais_pipeline/: __init__.py  cli.py  config.py  pipeline.py
src/ais_pipeline/io/: __init__.py  reader.py  shard_loader.py  streaming_loader.py  writer.py
src/ais_pipeline/state/: checkpoint.py  continuity.py
tests/: __init__.py  comprehensive_test.py  inspect_data.py  test_ais_data_cleaner.py  test_integration_ais_data_cleaner.py  test_s3_processor.py
